js arrays opdrachten

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <!-- <li>Avatar</li> -->
     </ul>
     
-
+<button class="btn">Insert</button>
+<div class="function"></div>
 
 
 <script src="/Js/main.js"></script>
