js arrays opdracht

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <!-- <li>Avatar</li> -->
     </ul>
     
-<button class="btn">Insert</button>
-<div class="function"></div>
+<button class="btn-add">Insert</button>
 
 
 <script src="/Js/main.js"></script>
